# nephcrawler

./: README.md  pyproject.toml  scrapy.cfg
nephcrawler/: items.py  middlewares.py  pipelines.py  settings.py
nephcrawler/spiders/: __init__.py
scripts/: build.sh
tests/: test_nephcrawler.py
