[tool.poetry]
name = "nephcrawler"
version = "0.1.0"
description = ""
authors = ["Jonathan Rovieri <jrovieri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
scrapy-fake-useragent = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
